--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -1,23 +1,111 @@
 * {
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  line-height: 1.5;
+    font-family: sans-serif;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 50px auto 50px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
+a {
+    color: black;
+    text-decoration: underline;
+    text-decoration-thickness: 5px;
+    justify-self: baseline;
 }
 
-p {
-  margin: 0;
+header {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: #555;
+    color: #fff;
+    align-items: center;
+}
+
+header nav {
+    justify-self: flex-end;
+}
+
+header nav a {
+    color: rgb(70, 183, 166);
+}
+
+header nav a:hover {
+    text-decoration: underline;
+}
+/*header .left-section > */
+
+main {
+    grid-column: 1 / 3;
+    display: grid;
+    grid-template-columns: 1fr 2fr 3fr;
+}
+main section {
+    background-color: lightseagreen;
+     padding: 15px;
+     border: 3px solid black;
+}
+
+.hero-image {
+    display: grid;
+    grid-column: 1 /4;
+    background-image: url("../images/02-hero-bg.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.hero-text {
+    text-align:right;
+    justify-self: flex-end;
+    position:absolute;
+    top: 80%;
+    right: 1%;
+    color: white;
+}
+.about {
+    display: grid;
+    grid-column:  1/2;
+}
+.about p {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    grid-column: span 2 / 4;
+    border-left: 10px;
+}
+.work {
+    display: grid;
+    grid-column: 1/4;
+}
+
+footer {
+    display: grid;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    align-items: center;
+    grid-template-columns: 1fr 2fr;
+    background-color: white;
+    color: #000;
+}
+footer nav {
+    justify-self: center;
+}
+
+footer nav a {
+    color: black;
+    margin: 30px;
+}
+
+footer nav a:hover {
+    text-decoration: underline;
 }
