--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -9,7 +9,8 @@ html, body {
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    line-height: 1.5;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 50px auto 50px;
