--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -86,7 +86,9 @@ main section, footer {
 .about {
     display: flex;
     height: 200px;
-    background-image: url(../images/02-portfolio-1.jpg);
+    background-image: url(../images/harley-davidson-breakout-picture-gallery-10399.jpeg);
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;;
     /* grid-column:  1/4; */
 }
