--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -13,7 +13,7 @@ body {
     line-height: 1.5;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 50px auto 50px;
+   grid-template-rows: 100px auto 100px;
 }
 
 a {
@@ -33,6 +33,23 @@ header {
     align-items: center;
 }
 
+/*header .left-section > */
+button {
+    background-color: rgb(70, 183, 166);
+    size: 90px;
+    margin: 5px;
+    padding: 20px;
+ }
+
+/* logo {
+    size: 90px;
+} */
+
+ logo h1 {
+    color:#555;
+    /* size: 80px; */
+
+ }
 header nav {
     justify-self: flex-end;
 }
@@ -44,17 +61,22 @@ header nav a {
 header nav a:hover {
     text-decoration: underline;
 }
-/*header .left-section > */
+
 
 main {
     grid-column: 1 / 3;
     display: grid;
     grid-template-columns: 1fr 2fr 3fr;
 }
+
+h2 {
+    align-self: center;
+}
+
 main section {
     background-color: lightseagreen;
-     padding: 15px;
-     border: 3px solid black;
+    padding: 15px;
+    border: 3px solid black;
 }
 
 .hero-image {
@@ -64,6 +86,7 @@ main section {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
+    grid-gap: 1.25rem;
 }
 
 .hero-text {
@@ -71,28 +94,42 @@ main section {
     justify-self: flex-end;
     position:absolute;
     top: 80%;
-    right: 1%;
+    right: 2%;
     color: white;
 }
 .about {
     display: grid;
-    grid-column:  1/2;
+    grid-column: 1/4;
+    grid-template-columns: 25% / 75%;
+    background-image: url(../images/02-portfolio-1.jpg);
+    background-repeat: no-repeat;
+    grid-gap: 1.25rem;
 }
 .about p {
     display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-column: span 2 / 4;
+    grid-column: 2 / 4;
     border-left: 10px;
+    border-color: #fff;
 }
+
 .work {
     display: grid;
     grid-column: 1/4;
+    grid-template-columns: 25% / 75%;
+    background-image: url(../images/02-portfolio-2.jpg);
+    grid-gap: 1.25rem;
 }
 
+.work p {
+    display: grid;
+    grid-column: 2 / 4;
+    border-left: 10px;
+    border-color: #fff;
+}
 footer {
     display: grid;
-    grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column: 1/4;
+    grid-template-columns: 25% / 75%;
     align-items: center;
     grid-template-columns: 1fr 2fr;
     background-color: white;
