trying to fix the folder merge

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ html, body {
 body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', 'Arial', 'sans-serif';
     line-height: 1.5;
+    color: #555;
     display: grid;
     grid-template-columns: 1fr 1fr;
    grid-template-rows: 100px auto 100px;
@@ -20,7 +21,7 @@ a {
     color: black;
     text-decoration: underline;
     text-decoration-thickness: 5px;
-    justify-self: baseline;
+    /* justify-self: baseline; */
 }
 
 header {
@@ -29,7 +30,7 @@ header {
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: #555;
-    color: #fff;
+    color: #555;
     align-items: center;
 }
 
@@ -101,7 +102,8 @@ main section {
     display: grid;
     grid-column: 1/4;
     grid-template-columns: 25% / 75%;
-    background-image: url(../images/02-portfolio-1.jpg);
+    background-image: url(../images/harley-davidson-breakout-picture-gallery-10399.jpeg);
+    background-size: cover;
     background-repeat: no-repeat;
     grid-gap: 1.25rem;
 }
@@ -129,16 +131,23 @@ main section {
 footer {
     display: grid;
     grid-column: 1/4;
-    grid-template-columns: 25% / 75%;
     align-items: center;
     grid-template-columns: 1fr 2fr;
     background-color: white;
-    color: #000;
+    color: #0000
+}
+
+.contact me {
+    color: black;
 }
 footer nav {
     justify-self: center;
 }
 
+footer h2 {
+    margin-left: 10px;
+    color: #555;
+}
 footer nav a {
     color: black;
     margin: 30px;
